--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           github_token: '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'
           last_commit_age_days: 1
           ignore_branches: main
-          github_base_url: https://api.github.com
+          github_base_url: https://api.github.com/api/v3
 
           # Disable dry run and actually get stuff deleted
           dry_run: no
